# adb-1

./: Makefile  Makefile.am  Makefile.in  adb.c  adb.h  adb_client.c  auto.sh  config.h  config.h.in  config.status  configure  configure.ac  file_sync_client.c  file_sync_service.h  services.c  socket_network_client.c  sysdeps.h  transport_local.c  transport_usb.c  usb_vendors.c
hostadb/: Makefile  Makefile.am  Makefile.in
include/cutils/: sockets.h
lib/: Makefile.am  Makefile.in
lib/libcutils/: Makefile.am  Makefile.in  socket_inaddr_any_server.c  socket_local_client.c  socket_local_server.c  socket_loopback_client.c  socket_loopback_server.c  socket_network_client.c  tzstrftime.c
lib/libhost/: CopyFile.c  Makefile.am
lib/liblog/: Makefile.am
lib/libutils/: Makefile.am  String8.cpp
lib/libzipfile/: Makefile.am  Makefile.in
libcutils/: Makefile  Makefile.am  Makefile.in  sockets.c
libzipfile/: Makefile  Makefile.am  Makefile.in
src/: Makefile.am  adb.c  adb.h  commandline.c  fdevent.c  file_sync_client.c  mutex_list.h  services.c  socket_inaddr_any_server.c  socket_local_client.c  socket_loopback_client.c  socket_loopback_server.c  sockets.c  sysdeps.h  transport.c  transport_usb.c  usb_vendors.c
src/aapt/: CrunchCache.cpp  Images.cpp  Main.cpp  Makefile.am
src/adb/: Makefile.am  Makefile.in  adb.h  adb_client.c  commandline.c  fdevent.c  file_sync_client.c  services.c  sockets.c  sysdeps.h  transport_local.c  transport_usb.c
src/fastboot/: Makefile.am
