bin_PROGRAMS = adb
adb_SOURCES= adb.c \
             services.c \
             transport.c \
	     adb_client.c  \
             shlist.c  \
             transport_local.c \
	     centraldir.c  \
             socket_inaddr_any_server.c  \
	     transport_usb.c \
	     commandline.c \
             socket_local_client.c    \
             usb_linux.c  \
	     console.c    \
             socket_loopback_client.c   \
	     usb_vendors.c \
	     fdevent.c     \
             socket_loopback_server.c   \
	     utils.c \
	     file_sync_client.c \
	     socket_network_client.c   \
	     zipfile.c \
	     get_my_path_linux.c \
	     sockets.c
adb_LDFLAGS = -lpthread -lz

