noinst_LIBRARIES = libcutils.a
AM_CFLAGS = -I../../include/ -DHAVE_PTHREADS -DHAVE_SYS_UIO_H -DANDROID_SMP=0
libcutils_a_SOURCES = 	array.c  \
	hashmap.c  \
	atomic.c  \
	native_handle.c  \
	buffer.c \
	socket_inaddr_any_server.c  \
	socket_local_client.c  \
	socket_local_server.c  \
	socket_loopback_client.c \
	socket_loopback_server.c  \
	socket_network_client.c  \
	config_utils.c  \
	cpu_info.c  \
	load_file.c  \
	open_memstream.c  \
	strdup16to8.c  \
	strdup8to16.c  \
	record_stream.c \
	process_name.c  \
	properties.c  \
	threads.c  \
	sched_policy.c  \
	iosched_policy.c \
	str_parms.c \
  ashmem-host.c \
          abort_socket.c   \
        selector.c  \
        tztime.c  \
        zygote.c \
        tzstrftime.c \
        dlmalloc_stubs.c
