noinst_LIBRARIES = libutils.a
libutils_a_SOURCES = Asset.cpp \
AssetDir.cpp \
AssetManager.cpp \
BufferedTextOutput.cpp \
CallStack.cpp \
Debug.cpp \
FileMap.cpp \
Flattenable.cpp \
misc.cpp \
ObbFile.cpp \
Pool.cpp \
RefBase.cpp \
ResourceTypes.cpp \
SharedBuffer.cpp \
Static.cpp \
StopWatch.cpp \
StreamingZipInflater.cpp \
String16.cpp \
String8.cpp \
StringArray.cpp \
SystemClock.cpp \
TextOutput.cpp \
Threads.cpp \
Timers.cpp \
VectorImpl.cpp \
ZipFileCRO.cpp \
ZipFileRO.cpp \
ZipUtils.cpp 
AM_CXXFLAGS = -I../../include  -DHAVE_SYS_UIO_H -DHAVE_POSIX_FILEMAP -DHAVE_PTHREADS -DLIBUTILS_NATIVE=1
AM_LDFLAGS = -lz -lpthread

